--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #fff;
   /* HEADER */
   /* MAIN */
@@ -39,7 +39,7 @@ body header .header-text h3 {
 }
 
 body header .header-text p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 0.9em;
   color: white;
   font-weight: 400;
@@ -124,7 +124,7 @@ body main .main-text h2 i {
 }
 
 body main .main-text p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 0.9em;
   margin-top: 5px;
   color: #a1a1a1;
@@ -164,7 +164,7 @@ body main .main-form form h2 {
 }
 
 body main .main-form form input {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   background-color: #ededed;
   -webkit-box-shadow: 0px 2px 10px 0px #00000029;
           box-shadow: 0px 2px 10px 0px #00000029;
@@ -180,7 +180,7 @@ body main .main-form form .inputError {
 }
 
 body main .main-form form select {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   background-color: #ededed;
   -webkit-box-shadow: 0px 2px 10px 0px #00000029;
           box-shadow: 0px 2px 10px 0px #00000029;
@@ -193,7 +193,7 @@ body main .main-form form button {
   border: none;
   background-color: #1d82ff;
   color: white;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 0.9em;
   border-radius: 20px;
   -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
@@ -270,6 +270,7 @@ body main .main-form form button:hover {
 
 #productSection #productsContainer .productDiv .productPrice {
   font-size: 0.9em;
+  height: 19px;
 }
 
 #productSection #productsContainer .productDiv .productPrice:last-of-type {
@@ -280,7 +281,7 @@ body main .main-form form button:hover {
   border: none;
   background-color: #1d82ff;
   color: white;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 0.8em;
   border-radius: 20px;
   -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
@@ -288,6 +289,10 @@ body main .main-form form button:hover {
   margin-top: 5px;
   padding: 5px 35px;
   cursor: pointer;
+}
+
+#productSection #productsContainer .productDiv .installmentsDiv {
+  text-align: center;
 }
 
 #productSection #productsContainer .productDiv .installmentButton {
@@ -298,6 +303,11 @@ body main .main-form form button:hover {
   margin-top: -58px;
   margin-right: 45px;
   cursor: pointer;
+}
+
+#productSection #productsContainer .productDiv .installmentSpan {
+  font-size: 0.9em;
+  height: 19px;
 }
 
 #productSection .divNextPage {
@@ -314,13 +324,12 @@ body main .main-form form button:hover {
   border: none;
   background-color: #1d82ffb5;
   color: white;
-  font-family: 'Montserrat';
-  font-size: 0.9em;
+  font-family: "Montserrat";
+  font-size: 0.8em;
+  padding: 9px 27px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
           box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
-  margin-top: 45px;
-  padding: 8px;
   cursor: pointer;
   -webkit-transition: 1s ease-in-out;
   transition: 1s ease-in-out;
@@ -366,7 +375,7 @@ body main .main-form form button:hover {
 }
 
 #shareSection .section-text p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 0.9em;
   margin-top: 5px;
   color: #a1a1a1;
@@ -433,7 +442,7 @@ body main .main-form form button:hover {
   border: none;
   background-color: #1d82ff;
   color: white;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 0.9em;
   border-radius: 20px;
   -webkit-box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
@@ -463,7 +472,7 @@ footer {
 
 footer p {
   text-align: center;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 0.7em;
   color: darkslategray;
 }
@@ -475,6 +484,13 @@ footer p {
     -webkit-clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
   }
+  body #productSection #productsContainer .productDiv {
+    height: 260px;
+    width: 60vw;
+  }
+  body #productSection #productsContainer .productDiv .installmentButton {
+    margin-right: 25px;
+  }
 }
 
 @media (width: 375px) {
@@ -483,6 +499,9 @@ footer p {
     -webkit-clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
   }
+  body #productSection #productsContainer .productDiv .installmentButton {
+    margin-right: 40px;
+  }
 }
 
 @media (min-width: 425px) and (max-width: 768px) {
@@ -490,6 +509,12 @@ footer p {
     height: 60vh;
     -webkit-clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
             clip-path: polygon(0 0, 100% 0%, 290% 35%, 0 88%);
+  }
+  body #productSection #productsContainer .productDiv .productDescription {
+    margin-bottom: 10px;
+  }
+  body #productSection #productsContainer .productDiv .installmentButton {
+    margin-right: 135px;
   }
 }
 
