--- a/css/style.scss
+++ b/css/style.scss
@@ -397,6 +397,8 @@ footer {
         }
 
         #productSection {
+            height: 2480px;
+
             #productsContainer {
                 .productDiv {
                     height: 260px;
@@ -419,6 +421,8 @@ footer {
         }
 
         #productSection {
+            height: 2480px;
+
             #productsContainer {
                 .productDiv {
                     .installmentButton {
