--- a/css/style.scss
+++ b/css/style.scss
@@ -124,6 +124,10 @@ body {
                     margin-bottom: 11px;
                 }
 
+                label {
+                    display: none;
+                }
+
                 input {
                     font-family: "Montserrat";
                     background-color: #ededed;
