--- a/css/style.scss
+++ b/css/style.scss
@@ -20,12 +20,12 @@ body {
 
         .header-text {
             padding: 20px;
-            h2 {
+            h1 {
                 font-size: 1.5em;
                 color: white;
                 font-weight: lighter;
             }
-            h3 {
+            h2 {
                 font-size: 1.3em;
                 color: white;
                 font-weight: bold;
@@ -57,7 +57,7 @@ body {
                     margin-bottom: 8px;
                     background: #fffffffa;
                     border: 1px solid #665fee;
-                    box-shadow: 0px 6px 14px #630b915c;
+                    box-shadow: 0px 6px 14px rgba(99, 11, 147, 0.361);
                     border-radius: 8px;
 
                     &:nth-child(3n) {
@@ -121,7 +121,7 @@ body {
                     font-size: 1.1em;
                     color: grey;
                     text-align: center;
-                    margin-bottom: 11px;
+                    margin-bottom: 22px;
                 }
 
                 label {
@@ -132,6 +132,8 @@ body {
                     font-family: "Montserrat";
                     background-color: #ededed;
                     box-shadow: 0px 2px 10px 0px #00000029;
+                    margin: 0px 20px;
+                    height: 35px;
                     border: none;
                     padding: 6px;
                     border-radius: 2px;
@@ -146,6 +148,7 @@ body {
                     font-family: "Montserrat";
                     background-color: #ededed;
                     box-shadow: 0px 2px 10px 0px #00000029;
+                    margin: 0px 20px;
                     border: none;
                     padding: 6px;
                     border-radius: 2px;
@@ -159,7 +162,7 @@ body {
                     font-size: 0.9em;
                     border-radius: 20px;
                     box-shadow: 0px 3px 11px 0px rgba(77, 137, 226, 0.753);
-                    margin-top: 40px;
+                    margin-top: 25px;
                     padding: 8px;
                     cursor: pointer;
                     transition: 1s ease-in-out;
@@ -183,7 +186,7 @@ body {
     background-color: white;
     clip-path: polygon(0 0, 100% 0%, 270% 110%, 0 95%);
 
-    h2 {
+    h1 {
         font-size: 1.1em;
         color: #525252;
         margin-bottom: 20px;
@@ -345,6 +348,7 @@ body {
                 background-color: #ededed;
                 box-shadow: 0px 2px 10px 0px #00000029;
                 border: none;
+                height: 35px;
                 padding: 6px;
                 border-radius: 2px;
             }
@@ -533,7 +537,7 @@ footer {
                     }
 
                     input {
-                        height: 30px;
+                        height: 35px;
                     }
 
                     button {
